--- a/app/src/main/res/layout/chats_item.xml
+++ b/app/src/main/res/layout/chats_item.xml
@@ -45,4 +45,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/profile_imgs_chats"
         app:layout_constraintTop_toBottomOf="@+id/text_chat_username" />
+
+    <TextView
+        android:id="@+id/text_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="00:00"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/text_chat_username"
+        app:layout_constraintTop_toTopOf="@+id/text_chat_username" />
 </androidx.constraintlayout.widget.ConstraintLayout>
