--- a/app/src/main/res/layout/current_user_item_messages.xml
+++ b/app/src/main/res/layout/current_user_item_messages.xml
@@ -16,9 +16,23 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintHorizontal_bias="0.5"/> <!-- Centraliza horizontalmente -->
+
+    <TextView
+        android:id="@+id/text_current_user_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:text="00:00"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/text_current_user_chat"
+        app:layout_constraintEnd_toEndOf="@+id/text_current_user_chat"
+        app:layout_constraintStart_toStartOf="@+id/text_current_user_chat"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.5"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
